feat: build dataset

--- a/build_dataset.ipynb
+++ b/build_dataset.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# build Gu-Dong map"
+    "# build Gu-Dong map\n",
+    "- 기존 match 파일에 동이 다 담겨있지 않아 https://www.seoul.go.kr/seoul/autonomy_sub.do 에서 새롭게 맵핑 파일 생성\n",
+    "- 크롤링"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,12 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
+    "# 1차 저장\n",
     "with open(\"dataset/map_gu_dong.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(results, f, ensure_ascii=False, indent=4)\n"
    ]
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +174,7 @@
        "'동작구'"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 393,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +298,7 @@
        "1184018                   63750  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -333,17 +336,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_dong[\"인현동2가\"] = \"중구\"\n",
+    "# fix & save\n",
+    "map[\"중구\"].append(\"인현동2가\")\n",
+    "map[\"종로구\"].append(\"신문로1가\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 400,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"dataset/map_gu_dong.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(map, f, ensure_ascii=False, indent=4) # gu-dong map file에 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match_dong[\"인현동2가\"] = \"중구\" # 직접 확인 후 데이터에 추가\n",
     "match_dong[\"신문로1가\"] = \"종로구\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +461,7 @@
        "5461            21~31      1  "
       ]
      },
-     "execution_count": 175,
+     "execution_count": 402,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
@@ -474,36 +498,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fix & save\n",
-    "map[\"중구\"].append(\"인현동2가\")\n",
-    "map[\"종로구\"].append(\"신문로1가\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"dataset/map_gu_dong.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(results, f, ensure_ascii=False, indent=4)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## match & save seoul cases"
+    "## join table & save seoul cases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -649,39 +652,30 @@
        "1184018                   63750  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(path_train)\n",
-    "df = df.loc[df[\"city\"] == \"서울특별시\"] # get in Seoul cases\n",
-    "print(df.shape)\n",
-    "df.tail(2)"
+    "df_train = pd.read_csv(path_train)\n",
+    "df_train = df_train.loc[df_train[\"city\"] == \"서울특별시\"] # get in Seoul cases\n",
+    "print(df_train.shape)\n",
+    "df_train.tail(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"gu\"] = df[\"dong\"].map(match_dong)"
+    "df_train[\"gu\"] = df_train[\"dong\"].map(match_dong) # {dong: gu} match dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"dataset/train_seoul.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -693,34 +687,150 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(path_test)\n",
-    "df = df.loc[df[\"city\"] == \"서울특별시\"] # get in Seoul cases\n",
-    "print(df.shape)"
+    "df_test = pd.read_csv(path_test)\n",
+    "df_test = df_test.loc[df_test[\"city\"] == \"서울특별시\"]\n",
+    "print(df_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"gu\"] = df[\"dong\"].map(match_dong)"
+    "df_test[\"gu\"] = df_test[\"dong\"].map(match_dong) # {dong: gu} match dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"dataset/test_seoul.csv\")"
+    "df_train.to_csv(\"dataset/train_seoul.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 416,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test.to_csv(\"dataset/test_seoul.csv\", index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# join park, daycare table"
+    "# park\n",
+    "- 기존 park.csv 데이터에는 마포구, 성북구가 없음\n",
+    "- 서울시 주요 공원: https://parks.seoul.go.kr/story/data/detailView.do?searchTp=&searchWd=&currentPage=1&bIdx=514\n",
+    "  - 1편2.구별현황 1.공원종류별 현황 tab\n",
+    "  - \"dataset/park_seoul.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 422,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"dataset/park_seoul_raw.csv\", names=[\"gu\", \"num\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic_park = dict()\n",
+    "for idx in range(len(df)):\n",
+    "    data = df.iloc[idx]\n",
+    "    gu, num = data[\"gu\"], data[\"num\"]\n",
+    "    dic_park[gu] = int(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 427,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{' 종로구 ': 106, ' 중  구 ': 72, ' 용산구 ': 107, ' 성동구 ': 100, ' 광진구 ': 68, ' 동대문 ': 92, ' 중랑구 ': 113, ' 성북구 ': 122, ' 강북구 ': 87, ' 도봉구 ': 80, ' 노원구 ': 187, ' 은평구 ': 136, ' 서대문 ': 123, ' 마포구 ': 144, ' 양천구 ': 123, ' 강서구 ': 173, ' 구로구 ': 114, ' 금천구 ': 55, ' 영등포 ': 108, ' 동작구 ': 86, ' 관악구 ': 135, ' 서초구 ': 179, ' 강남구 ': 165, ' 송파구 ': 174, ' 강동구 ': 129}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dic_park) # 동대문, 서대문, 영등포 뒤에 \"구\" 추가, 모든 구 이름에서 띄어쓰기 제거, 중 구 -> 중구"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = {\"영등포\", \"서대문\", \"동대문\"}\n",
+    "dic_park = dict()\n",
+    "for idx in range(len(df)):\n",
+    "    data = df.iloc[idx]\n",
+    "    gu, num = data[\"gu\"], data[\"num\"]\n",
+    "    gu = re.sub(r\"\\s+\", \"\", gu) # 텍스트 내 모든 space 제거\n",
+    "    if gu in target:\n",
+    "        gu += \"구\"\n",
+    "    dic_park[gu] = num.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 438,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'종로구': 106, '중구': 72, '용산구': 107, '성동구': 100, '광진구': 68, '동대문구': 92, '중랑구': 113, '성북구': 122, '강북구': 87, '도봉구': 80, '노원구': 187, '은평구': 136, '서대문구': 123, '마포구': 144, '양천구': 123, '강서구': 173, '구로구': 114, '금천구': 55, '영등포구': 108, '동작구': 86, '관악구': 135, '서초구': 179, '강남구': 165, '송파구': 174, '강동구': 129}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dic_park)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 439,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"dataset/park_seoul.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(dic_park, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# daycare\n",
+    "- 기존 daycare 데이터는 서울 21개구만 존재\n",
+    "- https://data.seoul.go.kr/dataList/OA-15457/S/1/datasetView.do\n",
+    "- 2023년 daycare center"
    ]
   },
   {
@@ -728,131 +838,119 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# load dataset\n",
-    "path_train = \"dataset/train.csv\"\n",
-    "path_test = \"dataset/test.csv\""
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 464,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"/home/jonas/github_wsl/apart/dataset/daycare_seoul_raw.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 466,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic_daycare = dict()\n",
+    "for idx in range(len(df)):\n",
+    "    data = df.iloc[idx]\n",
+    "    gu, num = data[\"자치구명\"], data[\"시설수합계\"]\n",
+    "    if gu != \"중구\":\n",
+    "        gu += \"구\"\n",
+    "    dic_daycare[gu] = num.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 469,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"dataset/daycare_seoul.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(dic_daycare, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# join tables\n",
+    "- train, test 데이터에 구 를 key로 공원, 보육시설 통합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 470,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load dataset\n",
+    "path_train = \"dataset/train_seoul.csv\"\n",
+    "path_test = \"dataset/test_seoul.csv\"\n",
+    "path_park = \"dataset/park_seoul.json\"\n",
+    "path_daycare = \"dataset/daycare_seoul.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 477,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1216553, 13)\n"
+      "(742285, 16)\n",
+      "(3911, 15)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>transaction_id</th>\n",
-       "      <th>apartment_id</th>\n",
-       "      <th>city</th>\n",
-       "      <th>dong</th>\n",
-       "      <th>jibun</th>\n",
-       "      <th>apt</th>\n",
-       "      <th>addr_kr</th>\n",
-       "      <th>exclusive_use_area</th>\n",
-       "      <th>year_of_completion</th>\n",
-       "      <th>transaction_year_month</th>\n",
-       "      <th>transaction_date</th>\n",
-       "      <th>floor</th>\n",
-       "      <th>transaction_real_price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1216551</th>\n",
-       "      <td>1234826</td>\n",
-       "      <td>9586</td>\n",
-       "      <td>부산광역시</td>\n",
-       "      <td>정관읍 용수리</td>\n",
-       "      <td>1364</td>\n",
-       "      <td>정관신도시롯데캐슬</td>\n",
-       "      <td>정관읍 용수리 1364 정관신도시롯데캐슬</td>\n",
-       "      <td>101.7400</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>201711</td>\n",
-       "      <td>21~30</td>\n",
-       "      <td>7</td>\n",
-       "      <td>26700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1216552</th>\n",
-       "      <td>1234827</td>\n",
-       "      <td>9578</td>\n",
-       "      <td>부산광역시</td>\n",
-       "      <td>정관읍 용수리</td>\n",
-       "      <td>1387</td>\n",
-       "      <td>정관 동일스위트1차</td>\n",
-       "      <td>정관읍 용수리 1387 정관 동일스위트1차</td>\n",
-       "      <td>84.9923</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>201711</td>\n",
-       "      <td>21~30</td>\n",
-       "      <td>16</td>\n",
-       "      <td>28800</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         transaction_id  apartment_id   city     dong jibun         apt  \\\n",
-       "1216551         1234826          9586  부산광역시  정관읍 용수리  1364   정관신도시롯데캐슬   \n",
-       "1216552         1234827          9578  부산광역시  정관읍 용수리  1387  정관 동일스위트1차   \n",
-       "\n",
-       "                         addr_kr  exclusive_use_area  year_of_completion  \\\n",
-       "1216551   정관읍 용수리 1364 정관신도시롯데캐슬            101.7400                2008   \n",
-       "1216552  정관읍 용수리 1387 정관 동일스위트1차             84.9923                2012   \n",
-       "\n",
-       "         transaction_year_month transaction_date  floor  \\\n",
-       "1216551                  201711            21~30      7   \n",
-       "1216552                  201711            21~30     16   \n",
-       "\n",
-       "         transaction_real_price  \n",
-       "1216551                   26700  \n",
-       "1216552                   28800  "
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(path_train)\n",
-    "print(df.shape)\n",
-    "df.tail(2)"
+    "df_train = pd.read_csv(path_train)\n",
+    "df_test = pd.read_csv(path_test)\n",
+    "print(df_train.shape)\n",
+    "print(df_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 478,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(path_park) as f:\n",
+    "    map_park = json.load(f)\n",
+    "    \n",
+    "with open(path_daycare) as f:\n",
+    "    map_daycare = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 479,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train[\"park\"] = df_train[\"gu\"].map(map_park)\n",
+    "df_test[\"park\"] = df_test[\"gu\"].map(map_park)\n",
+    "df_train[\"daycare\"] = df_train[\"gu\"].map(map_daycare)\n",
+    "df_test[\"daycare\"] = df_test[\"gu\"].map(map_daycare)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 480,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_csv(path_train, index=False)\n",
+    "df_test.to_csv(path_test, index=False)"
    ]
   },
   {
