--- a/build_dataset.ipynb
+++ b/build_dataset.ipynb
@@ -50,6 +50,7 @@
     "pattern_gu = r\"[가-힣]+\\s*구\"\n",
     "pattern_dong = r\"[가-힣|0-9]+[동|가]\"\n",
     "\n",
+    "\n",
     "def get_gu(data):\n",
     "    global pattern_gu\n",
     "    data = str(data.find(\"h5\"))\n",
@@ -57,6 +58,7 @@
     "    if len(data) != 1:\n",
     "        return\n",
     "    return data[0]\n",
+    "\n",
     "\n",
     "def get_dongs(data):\n",
     "    global pattern_dong\n",
@@ -79,7 +81,7 @@
     "    if not ext_gu:\n",
     "        continue\n",
     "    tmp_dongs = list()\n",
-    "    ext_dongs = get_dongs(data)    \n",
+    "    ext_dongs = get_dongs(data)\n",
     "    if ext_dongs:\n",
     "        tmp_dongs += ext_dongs\n",
     "    results[ext_gu] = tmp_dongs"
@@ -105,7 +107,7 @@
     "\n",
     "# 1차 저장\n",
     "with open(\"dataset/map_gu_dong.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(results, f, ensure_ascii=False, indent=4)\n"
+    "    json.dump(results, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
@@ -305,7 +307,7 @@
    ],
    "source": [
     "df = pd.read_csv(path_train)\n",
-    "df = df.loc[df[\"city\"] == \"서울특별시\"] # get in Seoul cases\n",
+    "df = df.loc[df[\"city\"] == \"서울특별시\"]  # get in Seoul cases\n",
     "print(df.shape)\n",
     "df.tail(2)"
    ]
@@ -330,7 +332,7 @@
     "for dong in dongs:\n",
     "    if dong not in match_dong:\n",
     "        errors.append(dong)\n",
-    "print(len(set(errors))) # 2개 케이스에 대해서는 구 매치 데이터가 없음 -> manually add\n",
+    "print(len(set(errors)))  # 2개 케이스에 대해서는 구 매치 데이터가 없음 -> manually add\n",
     "print(set(errors))"
    ]
   },
@@ -352,7 +354,7 @@
    "outputs": [],
    "source": [
     "with open(\"dataset/map_gu_dong.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(map, f, ensure_ascii=False, indent=4) # gu-dong map file에 저장"
+    "    json.dump(map, f, ensure_ascii=False, indent=4)  # gu-dong map file에 저장"
    ]
   },
   {
@@ -361,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_dong[\"인현동2가\"] = \"중구\" # 직접 확인 후 데이터에 추가\n",
+    "match_dong[\"인현동2가\"] = \"중구\"  # 직접 확인 후 데이터에 추가\n",
     "match_dong[\"신문로1가\"] = \"종로구\""
    ]
   },
@@ -468,7 +470,7 @@
    ],
    "source": [
     "df = pd.read_csv(path_test)\n",
-    "df = df.loc[df[\"city\"] == \"서울특별시\"] # get in Seoul cases\n",
+    "df = df.loc[df[\"city\"] == \"서울특별시\"]  # get in Seoul cases\n",
     "print(df.shape)\n",
     "df.tail(2)"
    ]
@@ -493,7 +495,7 @@
     "for dong in dongs:\n",
     "    if dong not in match_dong:\n",
     "        errors.append(dong)\n",
-    "print(len(set(errors))) # testset에서는 매치 안되는 동 없음\n",
+    "print(len(set(errors)))  # testset에서는 매치 안되는 동 없음\n",
     "print(set(errors))"
    ]
   },
@@ -659,7 +661,7 @@
    ],
    "source": [
     "df_train = pd.read_csv(path_train)\n",
-    "df_train = df_train.loc[df_train[\"city\"] == \"서울특별시\"] # get in Seoul cases\n",
+    "df_train = df_train.loc[df_train[\"city\"] == \"서울특별시\"]  # get in Seoul cases\n",
     "print(df_train.shape)\n",
     "df_train.tail(2)"
    ]
@@ -670,7 +672,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train[\"gu\"] = df_train[\"dong\"].map(match_dong) # {dong: gu} match dict"
+    "df_train[\"gu\"] = df_train[\"dong\"].map(match_dong)  # {dong: gu} match dict"
    ]
   },
   {
@@ -698,7 +700,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test[\"gu\"] = df_test[\"dong\"].map(match_dong) # {dong: gu} match dict"
+    "df_test[\"gu\"] = df_test[\"dong\"].map(match_dong)  # {dong: gu} match dict"
    ]
   },
   {
@@ -776,7 +778,9 @@
     }
    ],
    "source": [
-    "print(dic_park) # 동대문, 서대문, 영등포 뒤에 \"구\" 추가, 모든 구 이름에서 띄어쓰기 제거, 중 구 -> 중구"
+    "print(\n",
+    "    dic_park\n",
+    ")  # 동대문, 서대문, 영등포 뒤에 \"구\" 추가, 모든 구 이름에서 띄어쓰기 제거, 중 구 -> 중구"
    ]
   },
   {
@@ -790,7 +794,7 @@
     "for idx in range(len(df)):\n",
     "    data = df.iloc[idx]\n",
     "    gu, num = data[\"gu\"], data[\"num\"]\n",
-    "    gu = re.sub(r\"\\s+\", \"\", gu) # 텍스트 내 모든 space 제거\n",
+    "    gu = re.sub(r\"\\s+\", \"\", gu)  # 텍스트 내 모든 space 제거\n",
     "    if gu in target:\n",
     "        gu += \"구\"\n",
     "    dic_park[gu] = num.item()"
@@ -926,7 +930,7 @@
    "source": [
     "with open(path_park) as f:\n",
     "    map_park = json.load(f)\n",
-    "    \n",
+    "\n",
     "with open(path_daycare) as f:\n",
     "    map_daycare = json.load(f)"
    ]
